// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions Modal modal with actions snapshop 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop="static"
  className=""
  dialogAs={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "ModalDialog",
      "render": [Function],
    }
  }
  enforceFocus={true}
  keyboard={true}
  onEntering={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalFooter>
    <div
      className="modal-footer-tertiary"
      key="tertiary"
    >
      <ForwardRef
        appearance="primary"
        block={false}
        className="px-0"
        disabled={false}
        role="tertiary"
        type="button"
        width="100%"
      >
        Tertiary
      </ForwardRef>
    </div>
    <ForwardRef
      appearance="primary"
      block={false}
      disabled={false}
      key="secondary"
      role="secondary"
      type="button"
      width="100%"
    >
      Cancel
    </ForwardRef>
    <ForwardRef
      appearance="primary"
      block={false}
      className="ms-2"
      disabled={false}
      key="primary"
      role="primary"
      type="button"
      width="100%"
    >
      Primary
    </ForwardRef>
  </ModalFooter>
</Modal>
`;

exports[`Default Modal modal without header or content snapshop 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop="static"
  className=""
  dialogAs={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "ModalDialog",
      "render": [Function],
    }
  }
  enforceFocus={true}
  keyboard={true}
  onEntering={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalFooter>
    <ForwardRef
      appearance="primary"
      block={false}
      disabled={false}
      key="secondary"
      role="secondary"
      type="button"
      width="100%"
    >
      Close
    </ForwardRef>
  </ModalFooter>
</Modal>
`;

exports[`Extended Modal extended modal snapshop 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop="static"
  className=""
  dialogAs={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "ModalDialog",
      "render": [Function],
    }
  }
  enforceFocus={true}
  keyboard={true}
  onEntering={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    closeButton={false}
    closeLabel="Close"
  >
    <div
      className="custom-title"
    >
      title
    </div>
  </ModalHeader>
  <Component>
    <p
      className="custom-body"
    >
      body
    </p>
  </Component>
  <ModalFooter>
    <div
      className="custom-footer"
    >
      footer
    </div>
  </ModalFooter>
</Modal>
`;

exports[`Simple Modal modal with title and content snapshop 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop="static"
  className=""
  dialogAs={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "ModalDialog",
      "render": [Function],
    }
  }
  enforceFocus={true}
  keyboard={true}
  onEntering={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    closeButton={false}
    closeLabel="Close"
  >
    <ModalTitle>
      modal title
    </ModalTitle>
  </ModalHeader>
  <Component>
    modal content
  </Component>
  <ModalFooter>
    <ForwardRef
      appearance="primary"
      block={false}
      disabled={false}
      key="secondary"
      role="secondary"
      type="button"
      width="100%"
    >
      Close
    </ForwardRef>
  </ModalFooter>
</Modal>
`;
